# xGeeksAPI

./: .env  .gitignore  Procfile  README.md  app.py  init_db.py  main.py  pyproject.toml
.envs/: dev.yaml
constants/: roles.json
core/: auth.py  environment.py  jwt_tokens.py  utils.py
crud/: __init__.py  base.py  crud_meeting.py  crud_role.py  crud_user.py  crud_user_role.py
models/: __init__.py  meeting.py  role.py  user.py  user_role.py
routes/: __init__.py  authentication.py  meeting.py  user.py
schemas/: __init__.py  meeting.py  role.py  user.py  user_role.py
sql_app/: __init__.py  base.py  database.py
